--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <a class="logo" href="">Web <span class="logo-header">Studio</span></a>
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li><a class="nav-list-link" href="">Студія</a></li>
                 <li><a class="nav-list-link" href="">Портфоліо</a></li>
                 <li><a class="nav-list-link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contacts-list">
             <li><a class="contacts-list-link" href="">info@devstudio.com</a></li>
             <li><a class="contacts-list-link" href="">+38 096 111 11 11</a></li>
         </ul>
