--- a/index.html
+++ b/index.html
@@ -86,16 +86,18 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
-        <address class="addres">
-            <ul class="addres-list">
-                <li class="addres-list-item"><a class="addres-list-link location-link" href="">м. Київ, пр-т Лесі
-                        Українки, 26</a>
-                </li>
-                <li class="addres-list-item"><a class="addres-list-link" href="">info@devstudio.com</a></li>
-                <li class="addres-list-item"><a class="addres-list-link" href="">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="box">
+            <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
+            <address class="addres">
+                <ul class="addres-list">
+                    <li class="addres-list-item"><a class="addres-list-link location-link" href="">м. Київ, пр-т Лесі
+                            Українки, 26</a>
+                    </li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="">info@devstudio.com</a></li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
