--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <a class="logo" href="">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li><a class="nav-list-link" href="">Студія</a></li>
-                <li><a class="nav-list-link" href="">Портфоліо</a></li>
-                <li><a class="nav-list-link" href="">Контакти</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="">Портфоліо</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="">Контакти</a></li>
             </ul>
         </nav>
         <ul class="contacts-list">
