--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="nav-list">
                 <li class="nav-list-item"><a class="nav-list-link" href="">Студія</a></li>
-                <li class="nav-list-item"><a class="nav-list-link" href="">Портфоліо</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="">Контакти</a></li>
             </ul>
         </nav>
@@ -63,24 +63,24 @@
             <h3 class="section-team-title">Наша команда</h3>
             <ul class="team-list">
                 <li class="team-list-item">
-                    <img class="team-list-img" src="img.jpg" alt="">
+                    <img width="270" class="team-list-img" src="img.jpg" alt="">
                     <h5 class="team-list-title">Ігор Дем'яненко</h5>
                     <p class="team-list-text">Product Designer</p>
                 </li>
                 <li class="team-list-item">
-                    <img class="team-list-img" src="img1.jpg" alt="">
+                    <img width="270" class="team-list-img" src="img1.jpg" alt="">
                     <h5 class="team-list-title">Ольга Рєпіна</h5>
-                    <p class="team-list-text"></p>>Frontend Developer</p>
+                    <p class="team-list-text">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
-                    <img class="team-list-img" src="img2.jpg" alt="">
+                    <img width="270" class="team-list-img" src="img2.jpg" alt="">
                     <h5 class="team-list-title">Микола Тарасов</h5>
-                    <p class="team-list-text"></p>>Marketing</p>
+                    <p class="team-list-text">Marketing</p>
                 </li>
                 <li class="team-list-item">
-                    <img class="team-list-img" src="img3.jpg" alt="">
+                    <img width="270" class="team-list-img" src="img3.jpg" alt="">
                     <h5 class="team-list-title">Михайло Єрмаков</h5>
-                    <p class="team-list-text"></p>>UI Designer</p>
+                    <p class="team-list-text">UI Designer</p>
                 </li>
             </ul>
         </section>
