--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <a class="logo" href="">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="">Портфоліо</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="">Контакти</a></li>
             </ul>
