--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 
 <body>
     <header class="header">
-        <a class="logo" href="">Web <span class="logo-header">Studio</span></a>
+        <a class="logo" href="./index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="#">Студія</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="./portfolio.html">Портфоліо</a></li>
-                <li class="nav-list-item"><a class="nav-list-link" href="">Контакти</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul class="contacts-list">
-            <li><a class="contacts-list-link" href="">info@devstudio.com</a></li>
-            <li><a class="contacts-list-link" href="">+38 096 111 11 11</a></li>
+            <li><a class="contacts-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section class="section-hero">
             <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="section-hero-btn">Замовити послугу</button>
+            <button type="button" class="section-hero-btn">Замовити послугу</button>
         </section>
         <section class="section-features">
             <ul class="features-list">
@@ -54,32 +54,32 @@
         <section class="section-work">
             <h3 class="section-work-title">Чим ми займаємося</h3>
             <ul class="work-list">
-                <li class="work-list-item"><img class="work-list-img" src="img.png" alt=""></li>
-                <li class="work-list-item"><img class="work-list-img" src="img1.png" alt=""></li>
-                <li class="work-list-item"><img class="work-list-img" src="img2.png" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./img.png" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./img1.png" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./img2.png" alt=""></li>
             </ul>
         </section>
         <section class="section-team">
-            <h3 class="section-team-title">Наша команда</h3>
+            <h2 class="section-team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="img.jpg" alt="">
-                    <h5 class="team-list-title">Ігор Дем'яненко</h5>
+                    <img width="270" class="team-list-img" src="./img.jpg" alt="">
+                    <h3 class="team-list-title">Ігор Дем'яненко</h3>
                     <p class="team-list-text">Product Designer</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="img1.jpg" alt="">
-                    <h5 class="team-list-title">Ольга Рєпіна</h5>
+                    <img width="270" class="team-list-img" src="./img1.jpg" alt="">
+                    <h3 class="team-list-title">Ольга Рєпіна</h3>
                     <p class="team-list-text">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="img2.jpg" alt="">
-                    <h5 class="team-list-title">Микола Тарасов</h5>
+                    <img width="270" class="team-list-img" src="./img2.jpg" alt="">
+                    <h3 class="team-list-title">Микола Тарасов</h3>
                     <p class="team-list-text">Marketing</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="img3.jpg" alt="">
-                    <h5 class="team-list-title">Михайло Єрмаков</h5>
+                    <img width="270" class="team-list-img" src="./img3.jpg" alt="">
+                    <h3 class="team-list-title">Михайло Єрмаков</h3>
                     <p class="team-list-text">UI Designer</p>
                 </li>
             </ul>
@@ -90,11 +90,11 @@
             <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
             <address class="addres">
                 <ul class="addres-list">
-                    <li class="addres-list-item"><a class="addres-list-link location-link" href="">м. Київ, пр-т Лесі
+                    <li class="addres-list-item"><a class="addres-list-link location-link" href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м. Київ, пр-т Лесі
                             Українки, 26</a>
                     </li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="">info@devstudio.com</a></li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="">+38 096 111 11 11</a></li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
