--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             Українки, 26</a>
                     </li>
                     <li class="addres-list-item"><a class="addres-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="+380961111111">+38 096 111 11 11</a></li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
