--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         </ul>
     </header>
     <main>
+        <!-- секція герой -->
         <section class="section-hero">
             <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button" class="section-hero-btn">Замовити послугу</button>
         </section>
+        <!-- секція функций -->
         <section class="section-features">
             <ul class="features-list">
                 <li class="features-list-item">
@@ -51,34 +53,36 @@
                 </li>
             </ul>
         </section>
+        <!-- секція робота -->
         <section class="section-work">
             <h3 class="section-work-title">Чим ми займаємося</h3>
             <ul class="work-list">
-                <li class="work-list-item"><img class="work-list-img" src="./img.png" alt=""></li>
-                <li class="work-list-item"><img class="work-list-img" src="./img1.png" alt=""></li>
-                <li class="work-list-item"><img class="work-list-img" src="./img2.png" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./pursuit.jpg" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./pursuit1.jpg" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./pursuit2.jpg" alt=""></li>
             </ul>
         </section>
+        <!-- секція команда -->
         <section class="section-team">
             <h2 class="section-team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./img.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./Igor.jpg" alt="">
                     <h3 class="team-list-title">Ігор Дем'яненко</h3>
                     <p class="team-list-text">Product Designer</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./img1.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./Olga.jpg" alt="">
                     <h3 class="team-list-title">Ольга Рєпіна</h3>
                     <p class="team-list-text">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./img2.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./Mukola.jpg" alt="">
                     <h3 class="team-list-title">Микола Тарасов</h3>
                     <p class="team-list-text">Marketing</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./img3.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./Muxaylo.jpg" alt="">
                     <h3 class="team-list-title">Михайло Єрмаков</h3>
                     <p class="team-list-text">UI Designer</p>
                 </li>
