--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <section class="section-work">
             <h3 class="section-work-title">Чим ми займаємося</h3>
             <ul class="work-list">
-                <li class="work-list-item"><img class="work-list-img" src="./pursuit.jpg" alt=""></li>
-                <li class="work-list-item"><img class="work-list-img" src="./pursuit1.jpg" alt=""></li>
-                <li class="work-list-item"><img class="work-list-img" src="./pursuit2.jpg" alt=""></li>
+                <li class="work-list-item"><img class="work-list-img" src="./program.jpg" alt="program"></li>
+                <li class="work-list-item"><img class="work-list-img" src="./computer.jpg" alt="computer"></li>
+                <li class="work-list-item"><img class="work-list-img" src="./designer.jpg" alt="designer"></li>
             </ul>
         </section>
         <!-- секція команда -->
@@ -67,22 +67,22 @@
             <h2 class="section-team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./Igor.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./igor.jpg" alt="igor">
                     <h3 class="team-list-title">Ігор Дем'яненко</h3>
                     <p class="team-list-text">Product Designer</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./Olga.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./olga.jpg" alt="olga">
                     <h3 class="team-list-title">Ольга Рєпіна</h3>
                     <p class="team-list-text">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./Mukola.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./mukola.jpg" alt="mukola">
                     <h3 class="team-list-title">Микола Тарасов</h3>
                     <p class="team-list-text">Marketing</p>
                 </li>
                 <li class="team-list-item">
-                    <img width="270" class="team-list-img" src="./Muxaylo.jpg" alt="">
+                    <img width="270" class="team-list-img" src="./muxaylo.jpg" alt="muxaylo">
                     <h3 class="team-list-title">Михайло Єрмаков</h3>
                     <p class="team-list-text">UI Designer</p>
                 </li>
