--- a/portfolio.html
+++ b/portfolio.html
@@ -10,72 +10,74 @@
 
 <body>
     <header class="header">
-        <a class="logo" href="">Web <span class="logo-header">Studio</span></a>
+        <a class="logo" href="./index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
                 <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
-                <li class="nav-list-item"><a class="nav-list-link" href="">Портфоліо</a></li>
-                <li class="nav-list-item"><a class="nav-list-link" href="">Контакти</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="#">Портфоліо</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul class="contacts-list">
-            <li><a class="contacts-list-link" href="">info@devstudio.com</a></li>
-            <li><a class="contacts-list-link" href="">+38 096 111 11 11</a></li>
+            <li><a class="contacts-list-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
         <section class="portfolio-section">
             <ul class="buttons-list">
-                <li><button class="btn">Усі</button></li>
-                <li><button class="btn">вебсайти</button></li>
-                <li><button class="btn">додатки</button></li>
-                <li><button class="btn">дизайн</button></li>
-                <li><button class="btn">маркетинг</button></li>
+                <li><button type="button" class="btn">Усі</button></li>
+                <li><button type="button" class="btn">вебсайти</button></li>
+                <li><button type="button" class="btn">додатки</button></li>
+                <li><button type="button" class="btn">дизайн</button></li>
+                <li><button type="button" class="btn">маркетинг</button></li>
             </ul>
+            </section>
+            <section class="portfolio-teg">
             <ul class="portfolio-list">
                 <li>
-                    <img src="1.png" alt="">
+                    <img src="Tekhnokryak.jpg" alt="Tekhnokryak">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="2.png" alt="">
+                    <img src="New-Orlean-vs-Golden-Star.jpg" alt="New-Orlean-vs-Golden-Star">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="3.png" alt="">
+                    <img src="Seafood.jpg" alt="Seafood">
                     <h2>Ресторан Seafood</h2>
                     <p>Додаток</p>
                 </li>
                 <li>
-                    <img src="4.png" alt="">
+                    <img src="Prime.jpg" alt="Prime">
                     <h2>Проєкт Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="5.png" alt="">
+                    <img src="Boxes.jpg" alt="Boxes">
                     <h2>Проєкт Boxes</h2>
                     <p>Додаток</p>
                 </li>
                 <li>
-                    <img src="6.png" alt="">
+                    <img src="Inspiration-has-no-Borders.jpg" alt="Inspiration-has-no-Borders">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="7.png" alt="">
+                    <img src="Limited-Edition.jpg" alt="Limited-Edition">
                     <h2>Видання Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="8.png" alt="">
+                    <img src="LAB.jpg" alt="LAB">
                     <h2>Проєкт LAB</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="9.png" alt="">
+                    <img src="Growing-Business.jpg" alt="Growing-Business">
                     <h2>Growing Business</h2>
                     <p>Додаток</p>
                 </li>
@@ -88,16 +90,19 @@
             <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
             <address class="addres">
                 <ul class="addres-list">
-                    <li class="addres-list-item"><a class="addres-list-link location-link" href="">м. Київ, пр-т Лесі
+                    <li class="addres-list-item"><a class="addres-list-link location-link" href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м. Київ, пр-т Лесі
                             Українки, 26</a>
                     </li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="">info@devstudio.com</a></li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="">+38 096 111 11 11</a></li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="addres-list-item"><a class="addres-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
     </footer>
 
+</body>
+
+</html>
 </body>
 
 </html>
