--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <a class="logo" href="./index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="#">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
             </ul>
@@ -96,7 +96,7 @@
     </main>
     <footer class="footer">
         <div class="box">
-            <a class="logo" href="">Web<span class="logo-footer">Studio</span></a>
+            <a class="logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
             <address class="addres">
                 <ul class="addres-list">
                     <li class="addres-list-item"><a class="addres-list-link location-link" href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м. Київ, пр-т Лесі
