--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
         <section class="portfolio-section">
             <ul class="buttons-list">
                 <li><button type="button" class="btn">Усі</button></li>
-                <li><button type="button" class="btn">вебсайти</button></li>
-                <li><button type="button" class="btn">додатки</button></li>
-                <li><button type="button" class="btn">дизайн</button></li>
-                <li><button type="button" class="btn">маркетинг</button></li>
+                <li><button type="button" class="btn">Вебсайти</button></li>
+                <li><button type="button" class="btn">Додатки</button></li>
+                <li><button type="button" class="btn">Дизайн</button></li>
+                <li><button type="button" class="btn">Даркетинг</button></li>
             </ul>
             </section>
             <section class="portfolio-teg">
