--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="logo" href="./index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link current" href="./index.html">Студія</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
             </ul>
