--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,13 @@
         <a class="logo" href="../index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="../index.html">Студія</a></li>
-                <li class="nav-list-item"><a class="nav-list-link current" href="../portfolio.html">Портфоліо</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link current" href="./portfolio.html">Портфоліо</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul class="contacts-list">
-            <li><a class="contacts-list-link current" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts-list-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
