--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div class="container">
     <header class="header">
         <a class="logo" href="./index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
@@ -30,12 +31,16 @@
             <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    </div>
     <main>
+        <div class="container">
         <!-- секція герой -->
         <section class="section-hero">
             <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button" class="section-hero-btn">Замовити послугу</button>
         </section>
+    </div>
+    <div class="container">
         <!-- секція функций -->
         <section class="section-features">
             <ul class="features-list">
@@ -60,6 +65,8 @@
                 </li>
             </ul>
         </section>
+    </div>
+    <div class="container">
         <!-- секція робота -->
         <section class="section-work">
             <h3 class="section-work-title">Чим ми займаємося</h3>
@@ -69,6 +76,8 @@
                 <li class="work-list-item"><img class="work-list-img" src="./designer.jpg" alt="designer"></li>
             </ul>
         </section>
+    </div>
+    <div class="container">
         <!-- секція команда -->
         <section class="section-team">
             <h2 class="section-team-title">Наша команда</h2>
@@ -95,7 +104,9 @@
                 </li>
             </ul>
         </section>
+    </div>
     </main>
+    <div class="container">
     <footer class="footer">
         <div class="box">
             <a class="logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
@@ -110,6 +121,7 @@
             </address>
         </div>
     </footer>
+</div>
 </body>
 
 </html>
