--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <div class="container">
     <header class="header">
+        <div class="container">
         <a class="logo" href="./index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
@@ -30,19 +30,19 @@
             <li><a class="contacts-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    </header>
     </div>
+    </header>
     <main>
-        <div class="container">
         <!-- секція герой -->
         <section class="section-hero">
+            <div class="container1">
             <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button" class="section-hero-btn">Замовити послугу</button>
+        </div>
         </section>
-    </div>
-    <div class="container">
         <!-- секція функций -->
         <section class="section-features">
+            <div class="container">
             <ul class="features-list">
                 <li class="features-list-item">
                     <h3 class="features-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -64,22 +64,23 @@
                         завдань.</p>
                 </li>
             </ul>
+        </div>
         </section>
-    </div>
     <div class="container">
         <!-- секція робота -->
         <section class="section-work">
+            <div class="container">
             <h3 class="section-work-title">Чим ми займаємося</h3>
             <ul class="work-list">
                 <li class="work-list-item"><img class="work-list-img" src="./program.jpg" alt="program"></li>
                 <li class="work-list-item"><img class="work-list-img" src="./computer.jpg" alt="computer"></li>
                 <li class="work-list-item"><img class="work-list-img" src="./designer.jpg" alt="designer"></li>
             </ul>
+        </div>
         </section>
-    </div>
-    <div class="container">
         <!-- секція команда -->
         <section class="section-team">
+            <div class="container">
             <h2 class="section-team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-list-item">
@@ -103,11 +104,11 @@
                     <p class="team-list-text">UI Designer</p>
                 </li>
             </ul>
+        </div>
         </section>
-    </div>
     </main>
-    <div class="container">
     <footer class="footer">
+        <div class="container">
         <div class="box">
             <a class="logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
             <address class="addres">
@@ -120,6 +121,7 @@
                 </ul>
             </address>
         </div>
+    </div>
     </footer>
 </div>
 </body>
