--- a/index.html
+++ b/index.html
@@ -92,23 +92,31 @@
                     <ul class="team-list">
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/igor.jpg" alt="igor">
+                            <div class="team-box">
                             <h3 class="team-caption">Ігор Дем'яненко</h3>
                             <p class="team-text">Product Designer</p>
+                        </div>
                         </li>
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/olga.jpg" alt="olga">
+                            <div class="team-box">
                             <h3 class="team-caption">Ольга Рєпіна</h3>
                             <p class="team-text">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/mukola.jpg" alt="mukola">
+                            <div class="team-box">
                             <h3 class="team-caption">Микола Тарасов</h3>
                             <p class="team-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/muxaylo.jpg" alt="muxaylo">
+                            <div class="team-box">
                             <h3 class="team-caption">Михайло Єрмаков</h3>
                             <p class="team-text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
