--- a/index.html
+++ b/index.html
@@ -79,10 +79,19 @@
                     <h3 class="work-title">Чим ми займаємося</h3>
                     <ul class="work-list">
                         <li class="work-item"><img class="work-img" src="./img/program.jpg" alt="program">
+                            <div class="work-box">
+                                <h2 class="work-text">Десктопні додатки</h2>
+                            </div>
                         </li>
                         <li class="work-item"><img class="work-img" src="./img/computer.jpg" alt="computer">
+                            <div class="work-box">
+                                <h2 class="work-text">Мобільні додатки</h2>
+                            </div>
                         </li>
                         <li class="work-item"><img class="work-img" src="./img/designer.jpg" alt="designer">
+                            <div class="work-box">
+                                <h2 class="work-text">Дизайнерські рішення</h2>
+                            </div>
                         </li>
                     </ul>
                 </div>
