--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -113,7 +113,7 @@
     <footer class="footer">
         <div class="container footer-box">
             <div>
-                <a class="footer-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                <a class="footer-logo" href="../index.html">Web<span class="logo-footer">Studio</span></a>
                 <address class="addres">
                     <a class="footer-addres"
                         href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м.
