--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               </p>
             </div>
           </form>
-          <div class="btn">
+          <div class="modal-btn">
             <button type="submit" class="check-btn">Відправити</button>
           </div>
         </div>
